logs/drslib.log
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/drslib'...
Compiling './lib/python3.5/site-packages/drslib/cmip5.py'...
***   File "./lib/python3.5/site-packages/drslib/cmip5.py", line 128
    except T.TranslationError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/drslib/data'...
Compiling './lib/python3.5/site-packages/drslib/drs_command.py'...
***   File "./lib/python3.5/site-packages/drslib/drs_command.py", line 274
    print """\
==============================================================================
DRS Tree at %s
------------------------------------------------------------------------------\
""" % self.drs_root
              
                                                                              
              
                                                                               
  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/drslib/p_cmip5'...
Compiling './lib/python3.5/site-packages/drslib/p_cmip5/init.py'...
***   File "./lib/python3.5/site-packages/drslib/p_cmip5/init.py", line 484
    print 'usage: init.py go <dir>'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drslib/p_cmip5/product.py'...
***   File "./lib/python3.5/site-packages/drslib/p_cmip5/product.py", line 48
    print t
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/drslib/p_cmip5/xls'...
Compiling './lib/python3.5/site-packages/drslib/thredds.py'...
***   File "./lib/python3.5/site-packages/drslib/thredds.py", line 105
    except InvalidThreddsException, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drslib/translate_cmip3.py'...
***   File "./lib/python3.5/site-packages/drslib/translate_cmip3.py", line 84
    def _mkdirs(name, mode=0777):
                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/drslib-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/metaconfig'...
Listing './lib/python3.5/site-packages/metaconfig-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
